--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "log-update": "*"
+    "log-update": "*",
+    "express": "*"
   }
 }
